--- a/src/pages/Home/Popup.module.scss
+++ b/src/pages/Home/Popup.module.scss
@@ -8,7 +8,7 @@
     width: 100%;
     height: 100%;
 
-    background-color: bisque;
+    // background-color: bisque;
 }
 
 .main {
@@ -25,4 +25,18 @@
 .img {
     width: 50%;
     margin-right: 20px;
+}
+
+.short_desc {
+    height: 200px;
+    overflow: auto;
+    padding-right: 10px;
+
+    &::-webkit-scrollbar {
+        width: 10px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background-color: #d0d0d0;
+    }
 }
