--- a/src/pages/Home/Popup.module.scss
+++ b/src/pages/Home/Popup.module.scss
@@ -17,9 +17,19 @@
     transform: translate(-50%, -50%);
 
     width: 800px;
-    height: 500px;
+    height: auto;
 
     background-color: white;
+
+    z-index: 2;
+
+    @media (max-width: 1200px) {
+        width: 700px;
+    }
+
+    @media (max-width: 768px) {
+        width: 80%;
+    }
 }
 
 .img {
@@ -38,5 +48,20 @@
 
     &::-webkit-scrollbar-thumb {
         background-color: #d0d0d0;
+    }
+}
+
+.back {
+    top: 0%;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.664);
+
+    z-index: 1;
+}
+
+.close {
+    &:hover {
+        cursor: pointer;
     }
 }
