--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -1,9 +1,3 @@
-$unit: 1200px;
-
-@media (max-width: 768px) {
-    $unit: 500px;
-}
-
 * {
     padding: 0px;
     margin: 0px;
@@ -39,6 +33,10 @@ $unit: 1200px;
         width: 100%;
     }
 
+    html {
+        font-size: 14px;
+    }
+
     .mb-5-sm {
         margin-bottom: 5px;
     }
@@ -54,6 +52,10 @@ $unit: 1200px;
             justify-content: space-between;
         }
 
+        &--justify-end {
+            justify-content: flex-end;
+        }
+
         &--align-center {
             align-items: center;
         }
@@ -65,6 +67,7 @@ $unit: 1200px;
         &--wrap {
             flex-wrap: wrap;
         }
+
 
         &--g30 {
             gap: 30px;
@@ -82,6 +85,10 @@ $unit: 1200px;
 
         &--justify-between {
             justify-content: space-between;
+        }
+
+        &--justify-end {
+            justify-content: flex-end;
         }
 
         &--align-center {
@@ -111,6 +118,10 @@ $unit: 1200px;
 
     &--justify-between {
         justify-content: space-between;
+    }
+
+    &--justify-end {
+        justify-content: flex-end;
     }
 
     &--align-center {
@@ -172,6 +183,10 @@ $unit: 1200px;
 
 .fixed {
     position: fixed;
+}
+
+.hidden {
+    display: none;
 }
 
 .text-center {
